@@ -5,7 +5,8 @@
   * Bugfix:  rrd_convert.pl use XML tag TEMPLATE instead of CHECKCOMMAND to selects RRDs ( Sven Velt )
   * Feature: npcdmod.o increase perfdata buffer and log discarded perfdata ( Birger Schmidt )
   * Feature: rrd_modify.pl to change number of data sources of an RRD file
-  * Feature: new template check_apachestatus_auto.php
+  * Feature: New template check_apachestatus_auto.php
+  * Feature: Implement etc/config.d to place config snippets ( Lars Michelsen )
 
 **pnp-0.6.16 11/21/2011**
   * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)
